xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__absent_context_in_function.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"function() { . }\")"
---
Err(
    XPDY0002 {
        src: NamedSource {
            name: "input",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                13,
            ),
            length: SourceOffset(
                14,
            ),
        },
    },
)
