xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__add2.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"1 + 2 + 3\")"
---
Let(
    Let {
        name: Name(
            "v2",
        ),
        var_expr: Binary(
            Binary {
                left: (
                    Const(
                        Integer(
                            1,
                        ),
                    ),
                    0..1,
                ),
                op: Add,
                right: (
                    Const(
                        Integer(
                            2,
                        ),
                    ),
                    4..5,
                ),
            },
        ),
        return_expr: Binary(
            Binary {
                left: (
                    Variable(
                        Name(
                            "v2",
                        ),
                    ),
                    0..6,
                ),
                op: Add,
                right: (
                    Const(
                        Integer(
                            3,
                        ),
                    ),
                    8..9,
                ),
            },
        ),
    },
)
