xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__axis_step_with_predicates.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_xpath(\"child::a[. gt 1]\")"
---
FunctionDefinition(
    FunctionDefinition {
        params: [
            Param(
                Name(
                    "v0",
                ),
            ),
            Param(
                Name(
                    "v1",
                ),
            ),
            Param(
                Name(
                    "v2",
                ),
            ),
        ],
        body: Let(
            Let {
                name: Name(
                    "v3",
                ),
                var_expr: FunctionCall(
                    FunctionCall {
                        atom: Const(
                            Step(
                                Step {
                                    axis: Child,
                                    node_test: NameTest(
                                        Name(
                                            Name {
                                                name: "a",
                                                namespace: None,
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ),
                        args: [
                            Variable(
                                Name(
                                    "v0",
                                ),
                            ),
                        ],
                    },
                ),
                return_expr: Filter(
                    Filter {
                        context_names: ContextNames {
                            item: Name(
                                "v4",
                            ),
                            position: Name(
                                "v5",
                            ),
                            last: Name(
                                "v6",
                            ),
                        },
                        var_atom: Variable(
                            Name(
                                "v3",
                            ),
                        ),
                        return_expr: Binary(
                            Binary {
                                left: Variable(
                                    Name(
                                        "v4",
                                    ),
                                ),
                                op: Gt,
                                right: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    },
)
