xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__comma2.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_xpath(\"1, 2, 3\")"
---
Ok(
    (
        FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param(
                        Name(
                            "v0",
                        ),
                    ),
                    Param(
                        Name(
                            "v1",
                        ),
                    ),
                    Param(
                        Name(
                            "v2",
                        ),
                    ),
                ],
                body: (
                    Let(
                        Let {
                            name: Name(
                                "v5",
                            ),
                            var_expr: (
                                Binary(
                                    Binary {
                                        left: (
                                            Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            SourceSpan {
                                                offset: SourceOffset(
                                                    0,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        ),
                                        op: Comma,
                                        right: (
                                            Const(
                                                Integer(
                                                    2,
                                                ),
                                            ),
                                            SourceSpan {
                                                offset: SourceOffset(
                                                    3,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        3,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            ),
                            return_expr: (
                                Binary(
                                    Binary {
                                        left: (
                                            Variable(
                                                Name(
                                                    "v5",
                                                ),
                                            ),
                                            SourceSpan {
                                                offset: SourceOffset(
                                                    3,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        ),
                                        op: Comma,
                                        right: (
                                            Const(
                                                Integer(
                                                    3,
                                                ),
                                            ),
                                            SourceSpan {
                                                offset: SourceOffset(
                                                    6,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        3,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            6,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                ),
            },
        ),
        SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                7,
            ),
        },
    ),
)
