xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__empty_sequence.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_xpath(\"()\")"
---
FunctionDefinition(
    FunctionDefinition {
        params: [
            Param(
                Name(
                    "v0",
                ),
            ),
            Param(
                Name(
                    "v1",
                ),
            ),
            Param(
                Name(
                    "v2",
                ),
            ),
        ],
        body: Atom(
            Const(
                EmptySequence,
            ),
        ),
    },
)
