xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__for_expr.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"for $x in 1 return 2\")"
---
Ok(
    (
        Map(
            Map {
                context_names: ContextNames {
                    item: Name(
                        "v0",
                    ),
                    position: Name(
                        "v2",
                    ),
                    last: Name(
                        "v3",
                    ),
                },
                var_atom: (
                    Const(
                        Integer(
                            1,
                        ),
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            10,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                ),
                return_expr: (
                    Atom(
                        (
                            Const(
                                Integer(
                                    2,
                                ),
                            ),
                            SourceSpan {
                                offset: SourceOffset(
                                    19,
                                ),
                                length: SourceOffset(
                                    1,
                                ),
                            },
                        ),
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            19,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                ),
            },
        ),
        SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                20,
            ),
        },
    ),
)
