xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__for_expr2.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"for $x in (1, 2) return $x + 1\")"
---
Let(
    Let {
        name: Name(
            "v3",
        ),
        var_expr: Binary(
            Binary {
                left: Const(
                    Integer(
                        1,
                    ),
                ),
                op: Comma,
                right: Const(
                    Integer(
                        2,
                    ),
                ),
            },
        ),
        return_expr: Map(
            Map {
                context_names: ContextNames {
                    item: Name(
                        "v0",
                    ),
                    position: Name(
                        "v4",
                    ),
                    last: Name(
                        "v5",
                    ),
                },
                var_atom: Variable(
                    Name(
                        "v3",
                    ),
                ),
                return_expr: Binary(
                    Binary {
                        left: Variable(
                            Name(
                                "v0",
                            ),
                        ),
                        op: Add,
                        right: Const(
                            Integer(
                                1,
                            ),
                        ),
                    },
                ),
            },
        ),
    },
)
