xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__function_call.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"function($x) { $x + 1 }(3)\")"
---
Ok(
    Let(
        Let {
            name: Name(
                "v3",
            ),
            var_expr: FunctionDefinition(
                FunctionDefinition {
                    params: [
                        Param(
                            Name(
                                "v0",
                            ),
                        ),
                    ],
                    body: Binary(
                        Binary {
                            left: (
                                Variable(
                                    Name(
                                        "v0",
                                    ),
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        15,
                                    ),
                                    length: SourceOffset(
                                        2,
                                    ),
                                },
                            ),
                            op: Add,
                            right: (
                                Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        20,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            return_expr: FunctionCall(
                FunctionCall {
                    atom: (
                        Variable(
                            Name(
                                "v3",
                            ),
                        ),
                        SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: SourceOffset(
                                23,
                            ),
                        },
                    ),
                    args: [
                        (
                            Const(
                                Integer(
                                    3,
                                ),
                            ),
                            SourceSpan {
                                offset: SourceOffset(
                                    24,
                                ),
                                length: SourceOffset(
                                    1,
                                ),
                            },
                        ),
                    ],
                },
            ),
        },
    ),
)
