xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__function_definition.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"function($x) { $x + 1 }\")"
---
FunctionDefinition(
    FunctionDefinition {
        params: [
            Param(
                Name(
                    "v0",
                ),
            ),
        ],
        body: Binary(
            Binary {
                left: Variable(
                    Name(
                        "v0",
                    ),
                ),
                op: Add,
                right: Const(
                    Integer(
                        1,
                    ),
                ),
            },
        ),
    },
)
